@@ -34,6 +34,8 @@ See docs/WHAT_IS_WEFTEND.md and docs/WHY_RECEIPTS.md for details.
 - Check adapter dependency and maintenance status:
   npm run weftend -- adapter doctor
   npm run weftend -- adapter doctor --text
+  npm run weftend -- adapter doctor --write-policy policies/adapter_maintenance.json
+  npm run weftend -- adapter doctor --write-policy policies/adapter_maintenance.json --include-missing-plugins
 - Run safe-run with adapter auto-detect:
   npm run weftend -- safe-run <input> --out <dir> --adapter auto
 - Force a specific adapter:
